tests/error/type_match/base_case_tuple_mismatched_elem_type2.bz
function test()
{
	let _: [int32, float64, ...str] = [int32, float64, str, str, int8]();
}
